
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tmp ;
typedef int fd_set ;


 char* CMD ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_SETSIZE ;
 int FD_ZERO (int *) ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int perror (char*) ;
 int read (int,char*,int) ;
 scalar_t__ select (int ,int *,int *,int *,int *) ;
 int stderr ;
 int strlen (char*) ;
 scalar_t__ write (int,char*,int) ;

void shell(int fd)
{
 fd_set fds;
 char tmp[128];
 int n;


 fprintf(stderr, "\"Pai Mei taught you the five point palm exploding heart technique?\" -- Bill\n");
 fprintf(stderr, "\"Of course.\" -- Beatrix Kidd0, alias Black Mamba, alias The Bride (KB Vol2)\n\n");


 write(1, "# ", 2);
 write(fd, CMD, strlen(CMD));


 for (;;) {
  FD_ZERO(&fds);
  FD_SET(fd, &fds);
  FD_SET(0, &fds);

  if (select(FD_SETSIZE, &fds, ((void*)0), ((void*)0), ((void*)0)) < 0) {
   perror("select");
   break;
  }


  if (FD_ISSET(fd, &fds)) {
   if ((n = read(fd, tmp, sizeof(tmp))) < 0) {
    fprintf(stderr, "Goodbye...\n");
    break;
   }
   if (write(1, tmp, n) < 0) {
    perror("write");
    break;
   }
  }


  if (FD_ISSET(0, &fds)) {
   if ((n = read(0, tmp, sizeof(tmp))) < 0) {
    perror("read");
    break;
   }
   if (write(fd, tmp, n) < 0) {
    perror("write");
    break;
   }
  }
 }

 close(fd);
 exit(1);
}
